--- a/sub/greeting.html
+++ b/sub/greeting.html
@@ -66,7 +66,7 @@
             <div class="containerright">    
  
     <p class="txt-1">안녕하십니까?</p> 
-	<p class="txt-2">사람들의 마음을 매료시킬 준비가 되어있는 신입 웹디자이너 이현정입니다.<br>디자인을 잘하는 것은 디자이너의 기본이라고 생각합니다. 하지만 디자인만 잘하는 사람은 급격하게 변화하는 트렌드를 따라가기 어렵고 또한 사람들의 마음을 매료시키는 것도 힘들다고 생각 합니다.<br>제가 생각하는 디자인은 단순히 아름다운 외형적 형상에만 있는 것은 아니라 스토리가 있고, 전달하고자 하는 메세지가 있으며, 그로 하여금 즐거움을 전달할 때, 그 디자인은 비로소 사람들의 마음을 매료시키면서 긴 생명력을 갖게 되는 것 같습니다. 빠르게 발전하는 기술을 수용함과 더불어 고객의 가치관을 이해하고 감성적으로 생각하는 힘이 트렌드에 대응할 수 있는 유능한 디자이너가 될 것이라고 생각합니다. 저는 이처럼 틀에 박힌 생각, 틀에 박힌 기획, 틀에 박힌 디자인을 하는 것이 아니라 사람들과 소통하며, 변화하는 기술에 민감하고, 창의적인 생각과 고객의 가치와 필요에 의한 디자인을 기본으로 하는 기술적, 감성적으로 발전하는 디자이너! 고객들에게 쉽게 잊혀지지 않는 메세지를 전달하는 디자이너가 되기를 희망합니다. 감사합니다.
+	<p class="txt-2">사람들의 마음을 매료시킬 준비가 되어있는 신입 웹디자이너 이현정입니다. 디자인을 잘하는 것은 디자이너의 기본이라고 생각합니다. 하지만 디자인만 잘하는 사람은 급격하게 변화하는 트렌드를 따라가기 어렵고 또한 사람들의 마음을 매료시키는 것도 힘들다고 생각 합니다.<br>제가 생각하는 디자인은 단순히 아름다운 외형적 형상에만 있는 것은 아니라 스토리가 있고, 전달하고자 하는 메세지가 있으며, 그로 하여금 즐거움을 전달할 때, 그 디자인은 비로소 사람들의 마음을 매료시키면서 긴 생명력을 갖게 되는 것 같습니다. 빠르게 발전하는 기술을 수용함과 더불어 고객의 가치관을 이해하고 감성적으로 생각하는 힘이 트렌드에 대응할 수 있는 유능한 디자이너가 될 것이라고 생각합니다. 저는 이처럼 틀에 박힌 생각, 틀에 박힌 기획, 틀에 박힌 디자인을 하는 것이 아니라 사람들과 소통하며, 변화하는 기술에 민감하고, 창의적인 생각과 고객의 가치와 필요에 의한 디자인을 기본으로 하는 기술적, 감성적으로 발전하는 디자이너! 고객들에게 쉽게 잊혀지지 않는 메세지를 전달하는 디자이너가 되기를 희망합니다. 감사합니다.
                             </p>
 							<p class="txt-3">신입 웹디자이너 이현정</p>
         </div>
